Tidy: Minor code cleanups in IncrementalBuildMojo
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>